Update 2.Create New File.md

--- a/Persiapan_awal/2.Create New File.md
+++ b/Persiapan_awal/2.Create New File.md
@@ -1,1 +1,7 @@
+ # Membuat File Baru Robot Python
 
+- Buka Visual Code anda
+- Buat dulu folder Baru di VS code anda
+- Klik File -> Open folder ->
+  
+  
