Update 2.Create New File.md

--- a/Persiapan_awal/2.Create New File.md
+++ b/Persiapan_awal/2.Create New File.md
@@ -3,5 +3,8 @@
 - Buka Visual Code anda
 - Buat dulu folder Baru di VS code anda
 - Klik File -> Open folder ->
-  
+
+<p align="center">
+  <img src="/image/image1.png" alt="logo"/>
+</p>
   
