Update 2.Create New File.md

--- a/Persiapan_awal/2.Create New File.md
+++ b/Persiapan_awal/2.Create New File.md
@@ -8,3 +8,17 @@
   <img src="/image/image1.png" alt="logo"/>
 </p>
   
+- lalu tentukan dimana anda menyimpan file
+- Create new Folder ->  Tentukan Nama -> Select Folder
+
+ <p align="center">
+  <img src="/image/image2.png" alt="logo"/>
+</p>
+
+- setelah folder selesai di buat klik fraemwork ROBOCORP
+- lalu klik tanda  "+"  lalu klik Task Package (Robot)
+
+
+  <p align="center">
+  <img src="/image/image3.png" alt="logo"/>
+</p>
