Update 2.Create New File.md

--- a/Persiapan_awal/2.Create New File.md
+++ b/Persiapan_awal/2.Create New File.md
@@ -25,3 +25,26 @@
   <p align="center">
   <img src="/image/image3.png" alt="logo"/>
 </p>
+
+- Pilih python-minimal
+- pilih Use workspace folder(recommended)
+- maka file sudah selesai dan kita bisa memakai di task.py
+
+  Berikut Contoh gambarnya :
+
+    <p align="center">
+  <img src="/image/image4.png" alt="logo"/>
+</p>
+<br/>
+  <p align="center">
+  <img src="/image/image5.png" alt="logo"/>
+</p>
+<br/>
+  <p align="center">
+  <img src="/image/image6.png" alt="logo"/>
+</p>
+
+
+Setekah itu kita bisa memakai file RPA python 
+
+## Selamat Mencoba 
