--- a/Persiapan_awal/1. Instalasi.md
+++ b/Persiapan_awal/1. Instalasi.md
@@ -12,7 +12,7 @@ Persiapan apa saja yang harus kita lakukan untuk membuat robot (RPA) Python
   Jika sudah Install ke duanya pastikan Extension tambahan standar python juga di install yaitu dengan cara sebagai berikut 
 
 - Buka extension dan tulis di pencarian "Python" nanti akan keluar beberapa pilihan 
-- Pilih Ektension "Python", "Python Debugger" , "Python Indent", "Python Extension Pack"
+- Pilih Ektension "Python", "Python Debugger" , "Python Indent", "Python Extension Pack" lalu klik install
 
 ## Instalasi Pendukung RPA
 
